--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.14"
   }
 }
