--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.12",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^15.12.2",
     "nodemon": "^2.0.7",
     "ts-node": "^10.0.0",
